force-app/main/default/objects/OrderLineItem__c/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <inlineHelpText>The List price of the item</inlineHelpText>
    <label>List Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>