force-app/main/default/objects/OrderLineItem__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <inlineHelpText>The actual price of the item.</inlineHelpText>
    <label>Unit Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>