force-app/main/default/objects/OrderLineItem__c/validationRules/ProductMustbePopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductMustbePopulated</fullName>
    <active>true</active>
    <description>While Creating/updating the Order Line Item it is required to have the Product Record selected</description>
    <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>While Creating/updating the Order Line Item it is required to have the Product Record selected</errorMessage>
</ValidationRule>