force-app/main/default/objects/OrderLineItem__c/validationRules/QuantityMustBePopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>QuantityMustBePopulated</fullName>
    <active>true</active>
    <description>While Creating/updating the Order Line Item the Quantity field is required</description>
    <errorConditionFormula>ISBLANK ( Quantity__c )</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>While Creating/updating the Order Line Item the Quantity field is required</errorMessage>
</ValidationRule>